(chore) Fix some code style issues.